[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datagrok-api"
version = "0.0.1"
authors = [
  { name="Andrew Skalkin", email="askalkin@datagrok.ai" },
  { name="Amelichev Konstantin", email="kamelichev@datagrok.ai" },
]
description = "Client library for integration with datagrok API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/datagrok-ai/public"
Issues = "https://github.com/datagrok-ai/public/issues"