[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datagrok-api"
version = "0.0.9"
authors = [
  { name="Andrew Skalkin", email="askalkin@datagrok.ai" },
  { name="Amelichev Konstantin", email="kamelichev@datagrok.ai" },
]
description = "Client library for integration with datagrok API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pandas",
  "requests",
  "requests_toolbelt"
]

[tool.hatch.build.targets.wheel]
packages = ["datagrok_api"]

[tool.hatch.build.targets.sdist]
include = ["datagrok_api/**", "README.md", "pyproject.toml"]

[tool.hatch.build]
exclude = [
  "generate_docs.py",
  "docs/**",
  "tests/**",
  "venv/**"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xml",
    "pytest-item-dict",
    "data_to_xml",
]

[project.urls]
Homepage = "https://github.com/datagrok-ai/public"
Issues = "https://github.com/datagrok-ai/public/issues"
